deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: its-raining-service
  labels:
    app: its-raining-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: its-raining-service
  template:
    metadata:
      labels:
        app: its-raining-service
    spec:
      containers:
      - name: its-raining-service
        # Run this image
        image: 10.30.2.110:32000/narf/its-raining-service@sha256:9e4ff4b8a11121523d6e53d6ed718c474880805699456ab56a3d766d26cb9903
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            cpu: "1"
            memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: its-raining-service
  labels:
    app: its-raining-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: its-raining-service
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: its-raining-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "raining.looting.biz"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: its-raining-service
spec:
  hosts:
  - "raining.looting.biz"
  gateways:
  - its-raining-service-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: its-raining-service
        port:
          number: 8080
